overflow fixed in activities page

--- a/wild-earth/src/pages/activities/activities.component.scss
+++ b/wild-earth/src/pages/activities/activities.component.scss
@@ -26,7 +26,7 @@ a:hover {
   color: #ffeba7;
 }
 .over-hide {
-//   overflow: hidden;
+  overflow: hidden;
 }
 .size-22{
   font-size: 22px;
